--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,34 +1,68 @@
 ###########################
-# Key Binding 
+# Top 10 tmux Configuration that you should better do before start using tmux
 ###########################
-
-# Remap bind-key to Ctr+a from Ctr+b
+# 1) Change the Default Bind-Key: Using ctrl+b is little hard to trigger as the button in the keyboard are quite far. So, Remap bind-key to your convenient choice. I prefer backtick or 'C-a' key
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set-option -g prefix `
+bind-key ` send-prefix
 
-# Splitting a window in panes is much easier to remember if you use | for vertical splits and - for horizontal splits
+# 2) Change the Default Delay: The default delay value between Prefix combination and command is very less and sometimes doesn't work so we can increase the delay value
+set -s escape-time 5
+
+# 3) Reload Config File: custom keybinding to reload instead of shutingdown all tmux sessions and restart themor use source-file ~/.tmux.conf on all the sessions
+bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded !"
+
+# 4) Set Windows and Panes Index: By default the windows or panes start with index 0. silly programmers !
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
+setw -g pane-base-index 1
+
+# 5) Splitting Panes: Splitting a window in panes is much easier to remember if you use | for vertical splits and - for horizontal splits
 unbind %
 bind | split-window -h    
 unbind '"'
 bind - split-window -v    
 
+# 6) Enable Mouse Support: tmux is completely keyboard driven but at times mouse usage can come handy for easier movements
+setw -g mouse on
+
+# 7) Change Default Shell & Editor
+set-option -g default-shell /bin/zsh
+set -g status-keys vi
+
+# 8) Highlighting Active Window: Set different background color for active window
+set -g window-status-current-bg magenta
+
+# 9) Automatically Set Window Title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+
 ###########################
 # Colors
 ###########################
+# check out the colorcode from https://i.stack.imgur.com/e63et.png
 
 # color status bar
-set -g status-style fg=white,bg=colour235
+set -g status-style fg=white,bg=colour27
 # color of message bar
-set -g message-style fg=white,bold,bg=green
+set -g message-style fg=white,bold,bg=colour11
 
 # highlight current window
 setw -g window-status-style fg=cyan,bg=colour235
 setw -g window-status-current-style fg=white,bold,bg=red
 
 # set color of active pane
-set -g pane-border-style fg=colour240,bg=black
+set -g pane-border-style fg=colour243,bg=black
 set -g pane-active-border-style fg=green,bg=black
 
+###########################
+###  Other Customizations 
+############################
+# Open last window
+bind-key L last-window
 
+# synchronize panes - send the same commands to all the open panes
+# use <prefix> Shift-e to enable/disable
+bind E setw synchronize-panes
 
+TODO: https://blog.praveen.science/oh-my-zsh-cheat-sheet/
