Creating top 13 power config changes

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,21 +1,42 @@
 ###########################
-# Top 10 tmux Configuration that you should better do before start using tmux
+# Top 13 tmux Configuration that you should consider while start using tmux for three reasons:
+# 
+# 1. tmux has a lot of less-than-stellar default setting
+# 2. Keyboard shortcuts in tmux are a bit of a stretch, both physically and mentally
+# 2. And, Configuration is fun especially when you customize as per your need and taste
+# 
+# Let's make it friendly and along the way do not forget to put more comments in your configuration file; they’ll jog your memory later.
 ###########################
-# 1) Change the Default Bind-Key: Using ctrl+b is little hard to trigger as the button in the keyboard are quite far. So, Remap bind-key to your convenient choice. I prefer backtick or 'C-a' key
-unbind C-b
-set-option -g prefix `
-bind-key ` send-prefix
+
+# Start with the biggie - <prefix>
+
+# [1] an Easier Prefix: 
+#
+# Why: Using ctrl+b is little hard to trigger as the button in the keyboard are quite far. Most prefer 'C-a' key considering CapsLock can be remapped with Ctr and A sits just next to the CapsLock. If you have already used GNU screen, 'C-a' is familier key for you.
+unbind C-b                  # free the original bind key
+set-option -g prefix C-a    # Setting the prefix from C-b to C-a (-g for global)
+bind-key C-a send-prefix    # Ensure that we can send Ctrl-A to other apps
+
+# [2] Reload Config File:
+#
+# Why: two ways of reloading 1.shutingdown all tmux sessions and restart them 2. executing 'source-file ~/.tmux.conf' on all the sessions. Let’s make easy to reload our config file between changes by new keybinding.
+bind-key r source-file ~/.tmux.conf \; display "tmux config reloaded !"
+
+# [3] Count like Human: 
+#
+# Why: By default the windows or panes start with index 0 (silly programmers!). Though Tmux is one of those “created by and for programmers”, it makes it difficult to do switching windows; window 0 will be all the way to the left, meanwhile the zero key in keyboard is all the way to the right. Over the time, it messes with you. Let's fix it.
+set-option -g base-index 1                # window index will start with 1
+set-window-option -g pane-base-index 1    # pane index will start with 1
 
 # 2) Change the Default Delay: The default delay value between Prefix combination and command is very less and sometimes doesn't work so we can increase the delay value
-set -s escape-time 5
+# set -s escape-time 5
 
-# 3) Reload Config File: custom keybinding to reload instead of shutingdown all tmux sessions and restart themor use source-file ~/.tmux.conf on all the sessions
-bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded !"
-
-# 4) Set Windows and Panes Index: By default the windows or panes start with index 0. silly programmers !
-set-option -g base-index 1
-set-window-option -g pane-base-index 1
-setw -g pane-base-index 1
+# Kill it with Fire(x)! 
+#
+# By default, if you press <prefix> x tmux will ask if you’re sure you want to kill a pane before it does it. That’s nice and all, but what if you’d rather just kill it? Let's do that.
+unbind x               # unbind “x” from it’s current job of “ask andthen close”
+bind x kill-pane       # rebind it to just “close”
+bind X kill-session    # And while we’re at it, let’s create a key combo for killing the entire session
 
 # 5) Splitting Panes: Splitting a window in panes is much easier to remember if you use | for vertical splits and - for horizontal splits
 unbind %
@@ -24,18 +45,18 @@ unbind '"'
 bind - split-window -v    
 
 # 6) Enable Mouse Support: tmux is completely keyboard driven but at times mouse usage can come handy for easier movements
-setw -g mouse on
+# setw -g mouse on
 
 # 7) Change Default Shell & Editor
-set-option -g default-shell /bin/zsh
-set -g status-keys vi
+# set-option -g default-shell /bin/zsh
+# set -g status-keys vi
 
 # 8) Highlighting Active Window: Set different background color for active window
-set -g window-status-current-bg magenta
+# set -g window-status-current-bg magenta
 
 # 9) Automatically Set Window Title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
+# set-window-option -g automatic-rename on
+# set-option -g set-titles on
 
 ###########################
 # Colors
@@ -43,26 +64,26 @@ set-option -g set-titles on
 # check out the colorcode from https://i.stack.imgur.com/e63et.png
 
 # color status bar
-set -g status-style fg=white,bg=colour27
+# set -g status-style fg=white,bg=colour27
 # color of message bar
-set -g message-style fg=white,bold,bg=colour11
+#set -g message-style fg=white,bold,bg=colour11
 
 # highlight current window
-setw -g window-status-style fg=cyan,bg=colour235
-setw -g window-status-current-style fg=white,bold,bg=red
+# setw -g window-status-style fg=cyan,bg=colour235
+# setw -g window-status-current-style fg=white,bold,bg=red
 
 # set color of active pane
-set -g pane-border-style fg=colour243,bg=black
-set -g pane-active-border-style fg=green,bg=black
+# set -g pane-border-style fg=colour243,bg=black
+# set -g pane-active-border-style fg=green,bg=black
 
 ###########################
 ###  Other Customizations 
 ############################
 # Open last window
-bind-key L last-window
+# bind-key L last-window
 
 # synchronize panes - send the same commands to all the open panes
 # use <prefix> Shift-e to enable/disable
-bind E setw synchronize-panes
+# bind E setw synchronize-panes
 
-TODO: https://blog.praveen.science/oh-my-zsh-cheat-sheet/
+# TODO: https://blog.praveen.science/oh-my-zsh-cheat-sheet/
