Tmux: Configuration is fun especially when you customize as per your need and taste

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,14 +10,14 @@
 
 # Start with the biggie - <prefix>
 
-# [1] an Easier Prefix: 
+# [1] Easier Prefix: 
 #
 # Why: Using ctrl+b is little hard to trigger as the button in the keyboard are quite far. Most prefer 'C-a' key considering CapsLock can be remapped with Ctr and A sits just next to the CapsLock. If you have already used GNU screen, 'C-a' is familier key for you.
 unbind C-b                  # free the original bind key
 set-option -g prefix C-a    # Setting the prefix from C-b to C-a (-g for global)
 bind-key C-a send-prefix    # Ensure that we can send Ctrl-A to other apps
 
-# [2] Reload Config File:
+# [2] Shortcut to Reload the Config:
 #
 # Why: two ways of reloading 1.shutingdown all tmux sessions and restart them 2. executing 'source-file ~/.tmux.conf' on all the sessions. Let’s make easy to reload our config file between changes by new keybinding.
 bind-key r source-file ~/.tmux.conf \; display "tmux config reloaded !"
@@ -28,21 +28,53 @@ bind-key r source-file ~/.tmux.conf \; display "tmux config reloaded !"
 set-option -g base-index 1                # window index will start with 1
 set-window-option -g pane-base-index 1    # pane index will start with 1
 
-# 2) Change the Default Delay: The default delay value between Prefix combination and command is very less and sometimes doesn't work so we can increase the delay value
-# set -s escape-time 5
-
-# Kill it with Fire(x)! 
+# [4] Kill it with X-Force! 
 #
-# By default, if you press <prefix> x tmux will ask if you’re sure you want to kill a pane before it does it. That’s nice and all, but what if you’d rather just kill it? Let's do that.
+# Why: By default, if you press <prefix> x tmux will ask if you’re sure you want to kill a pane before it does it. That’s nice and all, but what if you’d rather just kill it? Let's do that.
 unbind x               # unbind “x” from it’s current job of “ask andthen close”
 bind x kill-pane       # rebind it to just “close”
 bind X kill-session    # And while we’re at it, let’s create a key combo for killing the entire session
 
-# 5) Splitting Panes: Splitting a window in panes is much easier to remember if you use | for vertical splits and - for horizontal splits
-unbind %
+# [5] Make Splitting Panes Intuitive: 
+#
+# Why: Splitting a window in panes are currently bound to <prefix> % and <prefix> ”>, which are really hard to remember.It is much easier to remember if you use | for vertical splits and - for horizontal splits.
 bind | split-window -h    
-unbind '"'
 bind - split-window -v    
+unbind %                 # You can leave the original options bound, 
+unbind '"'               # if you don’t have any other use for these weird key commands.
+
+# [6] Remapping Movement Keys (Vim Style):
+# 
+# Why: One of main reasons for using tmux is because it’s keyboard centric and plays well with vim, other favorite keyboard centric tool. If you use the Vim, you’re probably familiar with its use of h , j , k , and l for movement keys. Using the same keys means you do not have to take your fingers off the home row to move to arrow keys.
+bind h select-pane -L              # go left
+bind l select-pane -R              # go right
+
+bind j select-pane -D              # go down
+bind k select-pane -U              # go up
+
+bind -r C-h select-window -t :-    # cycle through the windows for quick window selection
+bind -r C-l select-window -t :+
+
+# [7] Resizing Panes:
+#
+# Why: To make it easy to remember, let’s use a variation of the Vim movement keys to resize windows. You need to use the SHIFT key to trigger the uppercase keystroke. To avoid using the PREFIX each time you want to resize the pane, set repeatable mode. I presume , by now, you did the capslock remapping to Ctrl.
+
+bind -r H resize-pane -L 2         # resize a pane two rows at a time.
+bind -r L resize-pane -R 2
+
+bind -r J resize-pane -D 2
+bind -r K resize-pane -U 2
+
+
+# [8] Visual Styling
+
+
+# [9] Customizing the Status Line’s Content
+
+
+
+# 2) Change the Default Delay: The default delay value between Prefix combination and command is very less and sometimes doesn't work so we can increase the delay value
+# set -s escape-time 5
 
 # 6) Enable Mouse Support: tmux is completely keyboard driven but at times mouse usage can come handy for easier movements
 # setw -g mouse on
@@ -59,7 +91,7 @@ bind - split-window -v
 # set-option -g set-titles on
 
 ###########################
-# Colors
+
 ###########################
 # check out the colorcode from https://i.stack.imgur.com/e63et.png
 
@@ -87,3 +119,41 @@ bind - split-window -v
 # bind E setw synchronize-panes
 
 # TODO: https://blog.praveen.science/oh-my-zsh-cheat-sheet/
+
+###########################
+###  No Change - Just a Cheatsheet 
+###
+###  - for some of the very useful unchanged keybindings 
+############################
+
+### Default Layouts
+#
+# <prefix> <alt>1  Switch to Even Horizontal Layout
+# <prefix> <alt>2  Switch to Even Vertical Layout
+# <prefix> <alt>3  Switch to Main Vertical Layout
+# <prefix> <alt>4  Switch to Main Horizontal Layout
+# <prefix> <alt>5  Switch to Tiled Layout
+# <prefix> <space> Rotate through the default layouts
+#
+###
+
+### Resizing Panes (remember we have enabled Vim Style also)
+#
+# <prefix> <ctrl>up      increase the height of this pane by one row
+# <prefix> <ctrl>down    decrease the height of this pane by one row
+# <prefix> <ctrl>left    increase the width of this pane by one column
+# <prefix> <ctrl>right   decrease the width of this pane by one column
+# <prefix> <alt>up       increase the height of this pane by five rows
+# <prefix> <alt>down     decrease the height of this pane by five rows
+# <prefix> <alt>left     increase the width of this pane by five columns
+# <prefix> <alt>right    decrease the width of this pane by five columns
+#
+###
+
+### Breaking Window Panes (no, it's ok)
+# 
+# The time will come when you realize you have too many panes in a single window. You will realize that you don’t need to monitor all seven servers in a single window; you can spread those puppies out a little bit.
+#
+# <prefix> ! 
+#
+###
