--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,41 +3,41 @@
 # 
 # 1. tmux has a lot of less-than-stellar default setting
 # 2. Keyboard shortcuts in tmux are a bit of a stretch, both physically and mentally
-# 2. And, Configuration is fun especially when you customize as per your need and taste
+# 2. And, Configuration is fun, especially when you customize as per your need and taste
 # 
-# Let's make it friendly and along the way do not forget to put more comments in your configuration file; they’ll jog your memory later.
+# Let's make it friendly, and along the way, do not forget to put more comments in your configuration file; they'll jog your memory later.
 ###########################
 
 # Start with the biggie - <prefix>
 
 # [1] Easier Prefix: 
 #
-# Why: Using ctrl+b is little hard to trigger as the button in the keyboard are quite far. Most prefer 'C-a' key considering CapsLock can be remapped with Ctr and A sits just next to the CapsLock. If you have already used GNU screen, 'C-a' is familier key for you.
+# Why: Using ctrl+b is a little hard to trigger as the keyboard button is pretty far. Most prefer the 'C-a' key, considering CapsLock can be remapped with Ctr, and A sits just next to the CapsLock. If you have already used the GNU screen, 'C-a' is the usual keys for you.
 unbind C-b                  # free the original bind key
-set-option -g prefix C-a    # Setting the prefix from C-b to C-a (-g for global)
-bind-key C-a send-prefix    # Ensure that we can send Ctrl-A to other apps
+set-option -g prefix C-a    # setting the prefix from C-b to C-a (-g for global)
+bind-key C-a send-prefix    # ensure that we can send Ctrl-A to other apps
 
 # [2] Shortcut to Reload the Config:
 #
-# Why: two ways of reloading 1.shutingdown all tmux sessions and restart them 2. executing 'source-file ~/.tmux.conf' on all the sessions. Let’s make easy to reload our config file between changes by new keybinding.
+# Why: There are two ways of reloading 1.shutting down all tmux sessions and restart them 2. executing 'source-file ~/.tmux.conf' on all the sessions. Let's make it easy to reload our config file between changes by new keybinding.
 bind-key r source-file ~/.tmux.conf \; display "tmux config reloaded !"
 
 # [3] Count like Human: 
 #
-# Why: By default the windows or panes start with index 0 (silly programmers!). Though Tmux is one of those “created by and for programmers”, it makes it difficult to do switching windows; window 0 will be all the way to the left, meanwhile the zero key in keyboard is all the way to the right. Over the time, it messes with you. Let's fix it.
+# Why: By default, the windows or panes start with index 0 (silly programmers!). Though Tmux is one of those “created by and for programmers”, this indexing makes it challenging to do switching windows; window 0 will be all the way to
 set-option -g base-index 1                # window index will start with 1
 set-window-option -g pane-base-index 1    # pane index will start with 1
 
 # [4] Kill it with X-Force! 
 #
-# Why: By default, if you press <prefix> x tmux will ask if you’re sure you want to kill a pane before it does it. That’s nice and all, but what if you’d rather just kill it? Let's do that.
+# Why: By default, if you press <prefix> x, tmux will ask if you're sure you want to kill a pane before it does it. That's nice and all, but what if you'd rather just kill it? Let's do that.
 unbind x               # unbind “x” from it’s current job of “ask andthen close”
 bind x kill-pane       # rebind it to just “close”
-bind X kill-session    # And while we’re at it, let’s create a key combo for killing the entire session
+bind X kill-session    # and, while we’re at it, let’s create a key combo for killing the entire session
 
 # [5] Make Splitting Panes Intuitive: 
 #
-# Why: Splitting a window in panes are currently bound to <prefix> % and <prefix> ”>, which are really hard to remember.It is much easier to remember if you use | for vertical splits and - for horizontal splits.
+# Why: Splitting a window in panes are currently bound to <prefix> % and <prefix> ”>, which are hard to remember. It is much easier to remember if you use | for vertical splits and - for horizontal splits.
 bind | split-window -h    
 bind - split-window -v    
 unbind %                 # You can leave the original options bound, 
@@ -45,7 +45,7 @@ unbind '"'               # if you don’t have any other use for these weird key
 
 # [6] Remapping Movement Keys (Vim Style):
 # 
-# Why: One of main reasons for using tmux is because it’s keyboard centric and plays well with vim, other favorite keyboard centric tool. If you use the Vim, you’re probably familiar with its use of h , j , k , and l for movement keys. Using the same keys means you do not have to take your fingers off the home row to move to arrow keys.
+# Why: One of the main reasons for using tmux is because it’s keyboard-centric and plays well with Vim, another favourite keyboard-centric tool. If you use the Vim, you’re probably familiar with its use of h, j, k, and l for movement keys. This way, you do not have to take your fingers off the home row to move to arrow keys.
 bind h select-pane -L              # go left
 bind l select-pane -R              # go right
 
@@ -57,8 +57,7 @@ bind -r C-l select-window -t :+
 
 # [7] Resizing Panes:
 #
-# Why: To make it easy to remember, let’s use a variation of the Vim movement keys to resize windows. You need to use the SHIFT key to trigger the uppercase keystroke. To avoid using the PREFIX each time you want to resize the pane, set repeatable mode. I presume , by now, you did the capslock remapping to Ctrl.
-
+# Why: To make it easy to remember, let’s use a variation of the Vim movement keys to resize windows. You need to use the SHIFT key to trigger the uppercase keystroke. To avoid using the PREFIX each time you want to resize the pane, set repeatable mode. I presume, by now, you did the capslock remapping to Ctrl.
 bind -r H resize-pane -L 2         # resize a pane two rows at a time.
 bind -r L resize-pane -R 2
 
