coloring setup for tmux active window

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,7 +20,7 @@ bind-key C-a send-prefix    # ensure that we can send Ctrl-A to other apps
 # [2] Shortcut to Reload the Config:
 #
 # Why: There are two ways of reloading 1.shutting down all tmux sessions and restart them 2. executing 'source-file ~/.tmux.conf' on all the sessions. Let's make it easy to reload our config file between changes by new keybinding.
-bind-key r source-file ~/.tmux.conf \; display "tmux config reloaded !"
+bind-key r source-file ~/.tmux.conf \; display "Config Reloaded !"
 
 # [3] Count like Human: 
 #
@@ -65,15 +65,63 @@ bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 
 
-# [8] Visual Styling
+# [8] Visual Styling: Configuring Colors
+#
+# Set the default terminal mode to 256color mode 
+#
+# Why: Once the right color mode is set, you’ll find it much easier to use programs such as Vim, Emacs, and other full-color programs from within tmux, especially when you are using more complex color schemes for shell or syntax highlighting
+#
+####
 
+set -g default-terminal "screen-256color"
+
+# Status Bar
+set -g status-style fg=white,bg=colour04             
+setw -g window-status-style fg=colour118,bg=colour04 
+setw -g window-status-current-style fg=black,bold,bg=colour011 
+
+# Pane divider
+setw -g pane-border-style fg=colour11,bg=colour234           
+setw -g pane-active-border-style fg=colour118,bg=colour234 
+
+# Cool trick: Let's dim out any pane that's not active.
+setw -g window-style fg=white,bg=colour234
+setw -g window-active-style fg=white,bg=colour016
+
+# Command / Message line
+setw -g message-style fg=black,bold,bg=colour11
 
 # [9] Customizing the Status Line’s Content
+#
+#
+####
+# Add session, window,pane indexes
+set -g status-left-length 40
+set -g status-left "[#[fg=white]S: #S, #[fg=colour11]W #I-#W, #[fg=colour3]P: #P #[fg=white]]"
+
+# Center the window list in the status line
+set -g status-justify centre
+
+# enable activity alerts
+set -g status-interval 60
+setw -g monitor-activity on # highlights the window name in the status line
+# set -g visual-activity on # show a message in the status line 
+
+# 
 
 
 
-# 2) Change the Default Delay: The default delay value between Prefix combination and command is very less and sometimes doesn't work so we can increase the delay value
-# set -s escape-time 5
+
+
+
+# [12] Change the Default Delay: The default delay value between Prefix combination and command is very less and sometimes doesn't work so we can increase the delay value
+set -s escape-time 5
+
+# [13] Navigating in Copy Mode: Turning Tmux into Vim
+# 
+# Let's face it, moving around a screen with the arrow keys, one space at a time, is a drag. It's an especially a huge drag if you're scrolling back through miles of errors. tmux makes it easy to adopt pretty much all of vim's motion keys, including searches...
+setw -g mode-keys vi
+
 
 # 6) Enable Mouse Support: tmux is completely keyboard driven but at times mouse usage can come handy for easier movements
 # setw -g mouse on
@@ -149,10 +197,34 @@ bind -r K resize-pane -U 2
 #
 ###
 
-### Breaking Window Panes (no, it's ok)
-# 
-# The time will come when you realize you have too many panes in a single window. You will realize that you don’t need to monitor all seven servers in a single window; you can spread those puppies out a little bit.
+### Switching Windows
 #
-# <prefix> ! 
+# <prefix> 0-9    Switch to window 0-9 - good enough for quick switch
+# <prefix> w      Choose a window from a menu
+# <prefix> c      Create a new window
+# <prefix> ,      Rename current window
+# <prefix> n      Cycle to next window
+# <prefix> p      Cycle to previous window
+# <prefix> !      Breaking Window Panes If you have too many panes in a single window.
+###
+
+### Session Commands
+#
+# <prefix> ( Switch to previous session
+# <prefix> ) Switch to next session
+# <prefix> s Choose from a list of sessions
+# <prefix> $ Rename the session
+# <prefix> d Detach from your current session
 #
 ###
+
+### Copy Mode
+#
+# <prefix> [ Enter Copy Mode
+# <prefix> ] Paste current buffer
+# <prefix> = List all buffers and choose one from which to paste
+# <space> (in copy mode) Start selection
+# <enter> (in copy mode) Exit copy mode, copy selection to buffer
+###
+
+
