launch layout setup

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -64,8 +64,26 @@ bind -r L resize-pane -R 2
 bind -r J resize-pane -D 2
 bind -r K resize-pane -U 2
 
+# [8] Change Default Shell & Editor
+# 
+# Why: It is effective to start pane with your prefered shell instead of starting with system gobal defalut and making change after that
+set-option -g default-shell /usr/bin/zsh
+set -g status-keys nano
 
-# [8] Visual Styling: Configuring Colors
+# [9] Enable Mouse Support: 
+#
+# tmux is completely keyboard driven but at times mouse usage can come handy for easier movements
+# setw -g mouse on
+
+# [10] Change the Default Delay: The default delay value between Prefix combination and command is very less and sometimes doesn't work so we can increase the delay value
+set -s escape-time 5
+
+# [11] Navigating in Copy Mode: Turning Tmux into Vim
+# 
+# Let's face it, moving around a screen with the arrow keys, one space at a time, is a drag. It's an especially a huge drag if you're scrolling back through miles of errors. tmux makes it easy to adopt pretty much all of vim's motion keys, including searches...
+setw -g mode-keys vi
+
+# [12] Visual Styling: Configuring Colors
 #
 # Set the default terminal mode to 256color mode 
 #
@@ -91,10 +109,8 @@ setw -g window-active-style fg=white,bg=colour016
 # Command / Message line
 setw -g message-style fg=black,bold,bg=colour11
 
-# [9] Customizing the Status Line’s Content
+# [13] Customizing the Status Line's Content
 #
-#
-####
 # Add session, window,pane indexes
 set -g status-left-length 40
 set -g status-left "[#[fg=white]S: #S, #[fg=colour11]W #I-#W, #[fg=colour3]P: #P #[fg=white]]"
@@ -107,61 +123,8 @@ set -g status-interval 60
 setw -g monitor-activity on # highlights the window name in the status line
 # set -g visual-activity on # show a message in the status line 
 
-# [12] Change the Default Delay: The default delay value between Prefix combination and command is very less and sometimes doesn't work so we can increase the delay value
-set -s escape-time 5
-
-# [13] Navigating in Copy Mode: Turning Tmux into Vim
-# 
-# Let's face it, moving around a screen with the arrow keys, one space at a time, is a drag. It's an especially a huge drag if you're scrolling back through miles of errors. tmux makes it easy to adopt pretty much all of vim's motion keys, including searches...
-setw -g mode-keys vi
-
-
-# 6) Enable Mouse Support: tmux is completely keyboard driven but at times mouse usage can come handy for easier movements
-# setw -g mouse on
-
-# 7) Change Default Shell & Editor
-# set-option -g default-shell /bin/zsh
-# set -g status-keys vi
-
-# 8) Highlighting Active Window: Set different background color for active window
-# set -g window-status-current-bg magenta
-
-# 9) Automatically Set Window Title
-# set-window-option -g automatic-rename on
-# set-option -g set-titles on
-
 ###########################
-
-###########################
-# check out the colorcode from https://i.stack.imgur.com/e63et.png
-
-# color status bar
-# set -g status-style fg=white,bg=colour27
-# color of message bar
-#set -g message-style fg=white,bold,bg=colour11
-
-# highlight current window
-# setw -g window-status-style fg=cyan,bg=colour235
-# setw -g window-status-current-style fg=white,bold,bg=red
-
-# set color of active pane
-# set -g pane-border-style fg=colour243,bg=black
-# set -g pane-active-border-style fg=green,bg=black
-
-###########################
-###  Other Customizations 
-############################
-# Open last window
-# bind-key L last-window
-
-# synchronize panes - send the same commands to all the open panes
-# use <prefix> Shift-e to enable/disable
-# bind E setw synchronize-panes
-
-# TODO: https://blog.praveen.science/oh-my-zsh-cheat-sheet/
-
-###########################
-###  No Change - Just a Cheatsheet 
+###  The below section is a Cheatsheet 
 ###
 ###  - for some of the very useful unchanged keybindings 
 ############################
