alias management- move out of rc

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -68,7 +68,7 @@ bind -r K resize-pane -U 2
 # 
 # Why: It is effective to start pane with your prefered shell instead of starting with system gobal defalut and making change after that
 set-option -g default-shell /usr/bin/zsh
-set -g status-keys nano
+set -g status-keys vi
 
 # [9] Enable Mouse Support: 
 #
@@ -103,8 +103,8 @@ setw -g pane-border-style fg=colour11,bg=colour234
 setw -g pane-active-border-style fg=colour118,bg=colour234 
 
 # Cool trick: Let's dim out any pane that's not active.
-setw -g window-style fg=white,bg=colour234
-setw -g window-active-style fg=white,bg=colour016
+setw -g window-style fg=white,bg=colour236
+setw -g window-active-style fg=white,bg=colour235
 
 # Command / Message line
 setw -g message-style fg=black,bold,bg=colour11
