~ named dir using dir hash table

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -183,4 +183,14 @@ setw -g monitor-activity on # highlights the window name in the status line
 # <enter> (in copy mode) Exit copy mode, copy selection to buffer
 ###
 
+### Terminal Style
+
+TS_COLOR='\033['
+TS_RESET='\033[0'
+TS_BOLD ='\033[1'
+TS_DIM  ='\033[2'
+TS_BLINK='\033[5m'
+
+
+export TS_COLOR TS_BLINK TS_RESET
 
