--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -111,11 +111,11 @@ setw -g message-style fg=black,bold,bg=colour11
 
 # [13] Customizing the Status Line's Content
 #
-# Add session, window,pane indexes
+# Add session, window, pane indexes - good to know 
 set -g status-left-length 40
 set -g status-left "[#[fg=white]S: #S, #[fg=colour11]W #I-#W, #[fg=colour3]P: #P #[fg=white]]"
 
-# Center the window list in the status line
+# Center the window list in the status line - this is much better 
 set -g status-justify centre
 
 # enable activity alerts
@@ -182,15 +182,3 @@ setw -g monitor-activity on # highlights the window name in the status line
 # <space> (in copy mode) Start selection
 # <enter> (in copy mode) Exit copy mode, copy selection to buffer
 ###
-
-### Terminal Style
-
-TS_COLOR='\033['
-TS_RESET='\033[0'
-TS_BOLD ='\033[1'
-TS_DIM  ='\033[2'
-TS_BLINK='\033[5m'
-
-
-export TS_COLOR TS_BLINK TS_RESET
-
