config for integrating tmux copy mode+ sys clipboard

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -78,10 +78,32 @@ set -g status-keys vi
 # [10] Change the Default Delay: The default delay value between Prefix combination and command is very less and sometimes doesn't work so we can increase the delay value
 set -s escape-time 5
 
-# [11] Navigating in Copy Mode: Turning Tmux into Vim
-# 
-# Let's face it, moving around a screen with the arrow keys, one space at a time, is a drag. It's an especially a huge drag if you're scrolling back through miles of errors. tmux makes it easy to adopt pretty much all of vim's motion keys, including searches...
+# [11] Working With Text and Buffers:
+#
+# This can be a real productive boost if you happen to do a lot of copying and pasting between windows
+#
+# To navigating through output in quick way
 setw -g mode-keys vi
+
+# Copying and Pasting Text: To make it familiar to vim 
+bind Escape copy-mode
+bind -t vi-copy 'v' begin-selection # start visual mode
+bind -t vi-copy 'y' copy-selection  # yank text into the buffer
+unbind p
+bind p paste-buffer
+bind C-b choose-buffer
+
+
+# To copy the ct buffer to the sys clipboard . This config <prefix> C-c
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+# make it even better -just one step with y itself
+# bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+
+# To paste text from sys clipboard into tmux session 
+bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\";tmux paste-buffer"
+
+# To take ASCII screenshots 
+bind C-s run "tmux capture-pane && save-buffer ~/.mytmux/screenshot/pane_\"$(date +%FT%T).ss\"
 
 # [12] Visual Styling: Configuring Colors
 #
@@ -181,4 +203,25 @@ setw -g monitor-activity on # highlights the window name in the status line
 # <prefix> = List all buffers and choose one from which to paste
 # <space> (in copy mode) Start selection
 # <enter> (in copy mode) Exit copy mode, copy selection to buffer
+# show-buffer
+# list-buffer
+# choose-buffer
 ###
+
+#### Vi mode keystroke
+#
+# h j k l Move one space left, up, down, right, respectively
+# <ctrl>b Scroll up one “page”
+# <ctrl>f Scroll down one “page”
+# g Jump to the top of the buffer
+# G Jump to the end of the buffer
+# w Jump to the beginning of the next word
+# b Jump back one word
+# fn Jump forward to the next occurrence of n on that line
+# Fn Jump backward to the previous occurrence of n on that line
+# ?*search*<enter> Search backwards through the buffer for search
+# /*search*<enter> Search forwards through the buffer for search
+# n Repeat the last / or ? search in the same direction
+# Repeat the last / or ? search in the opposite direction#
+#
+####
