tmux plugin config <pomo stat>

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,7 +24,7 @@ bind-key r source-file ~/.tmux.conf \; display "Config Reloaded !"
 
 # [3] Count like Human: 
 #
-# Why: By default, the windows or panes start with index 0 (silly programmers!). Though Tmux is one of those “created by and for programmers”, this indexing makes it challenging to do switching windows; window 0 will be all the way to
+# Why: By default, the windows or panes start with index 0 (silly programmers!). Though Tmux is one of those “created by and for programmers”, this indexing makes it challenging to do switching windows; window 0 will be all the way to.
 set-option -g base-index 1                # window index will start with 1
 set-window-option -g pane-base-index 1    # pane index will start with 1
 
@@ -38,8 +38,10 @@ bind X kill-session    # and, while we’re at it, let’s create a key combo fo
 # [5] Make Splitting Panes Intuitive: 
 #
 # Why: Splitting a window in panes are currently bound to <prefix> % and <prefix> ”>, which are hard to remember. It is much easier to remember if you use | for vertical splits and - for horizontal splits.
-bind | split-window -h    
-bind - split-window -v    
+# -c option => Opening a Pane in the Current Directory
+
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"   
 unbind %                 # You can leave the original options bound, 
 unbind '"'               # if you don’t have any other use for these weird key commands.
 
@@ -66,14 +68,10 @@ bind -r K resize-pane -U 2
 
 # [8] Change Default Shell & Editor
 # 
+# Since tmux is just a terminal multiplexer and not a shell of its own, you just specify exactly what to run when it starts
 # Why: It is effective to start pane with your prefered shell instead of starting with system gobal defalut and making change after that
 set-option -g default-shell /usr/bin/zsh
 set -g status-keys vi
-
-# [9] Enable Mouse Support: 
-#
-# tmux is completely keyboard driven but at times mouse usage can come handy for easier movements
-# setw -g mouse on
 
 # [10] Change the Default Delay: The default delay value between Prefix combination and command is very less and sometimes doesn't work so we can increase the delay value
 set -s escape-time 5
@@ -83,12 +81,14 @@ set -s escape-time 5
 # This can be a real productive boost if you happen to do a lot of copying and pasting between windows
 #
 # To navigating through output in quick way
-setw -g mode-keys vi
+set-window-option -g mode-keys vi
 
 # Copying and Pasting Text: To make it familiar to vim 
+# 
+# -T => key table. By default, key bound to prefix table, root table is option if we want to control with out prefix (not recommended)
 bind Escape copy-mode
-bind -t vi-copy 'v' begin-selection # start visual mode
-bind -t vi-copy 'y' copy-selection  # yank text into the buffer
+bind -T copy-mode-vi 'v' send-keys -X begin-selection            -N "start visual mode for selection"
+bind -T copy-mode-vi 'y' send-keys -X copy-selection-and-cancel  -N "yank text into the buffer"
 unbind p
 bind p paste-buffer
 bind C-b choose-buffer
@@ -102,8 +102,9 @@ bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
 # To paste text from sys clipboard into tmux session 
 bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\";tmux paste-buffer"
 
-# To take ASCII screenshots 
-bind C-s run "tmux capture-pane && save-buffer ~/.mytmux/screenshot/pane_\"$(date +%FT%T).ss\"
+# To take ASCII screenshots (tmux-resurrect uses C-s for saving, here binding to C-S-s ) . 
+# todo: something freezing the pane after this cmd
+# bind C-S-s run "tmux capture-pane && tmux save-buffer ~/.mytmux/screenshots/pane_\"$(date +%FT%T).ss\""
 
 # [12] Visual Styling: Configuring Colors
 #
@@ -117,21 +118,21 @@ set -g default-terminal "screen-256color"
 
 # Status Bar
 set -g status-style fg=white,bg=colour04             
-setw -g window-status-style fg=colour118,bg=colour04 
-setw -g window-status-current-style fg=black,bold,bg=colour011 
+set-window-option -g window-status-style fg=colour118,bg=colour04 
+set-window-option -g window-status-current-style fg=black,bold,bg=colour011 
 
 # Pane divider
-setw -g pane-border-style fg=colour11,bg=colour234           
-setw -g pane-active-border-style fg=colour118,bg=colour234 
+set-window-option -g pane-border-style fg=colour11,bg=colour234           
+set-window-option -g pane-active-border-style fg=colour118,bg=colour234 
 
 # Cool trick: Let's dim out any pane that's not active.
-setw -g window-style fg=white,bg=colour236
-setw -g window-active-style fg=white,bg=colour235
+set-window-option -g window-style fg=white,bg=colour236
+set-window-option -g window-active-style fg=white,bg=colour235
 
 # Command / Message line
-setw -g message-style fg=black,bold,bg=colour11
+set-window-option -g message-style fg=black,bold,bg=colour11
 
-# [13] Customizing the Status Line's Content
+# [12] Customizing the Status Line's Content
 #
 # Add session, window, pane indexes - good to know 
 set -g status-left-length 40
@@ -142,86 +143,20 @@ set -g status-justify centre
 
 # enable activity alerts
 set -g status-interval 60
-setw -g monitor-activity on # highlights the window name in the status line
+set-window-option -g monitor-activity on # highlights the window name in the status line
 # set -g visual-activity on # show a message in the status line 
 
-###########################
-###  The below section is a Cheatsheet 
-###
-###  - for some of the very useful unchanged keybindings 
-############################
+# [13] Extending tmux with Plugins
+# 
+# ref: https://github.com/tmux-plugins/tpm
+# 
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+run '~/.mytmux/plugins/tpm/tpm' # init TMUX plugin manager (should be lastline)
 
-### Default Layouts
+# [x] Enable Mouse Support: 
 #
-# <prefix> <alt>1  Switch to Even Horizontal Layout
-# <prefix> <alt>2  Switch to Even Vertical Layout
-# <prefix> <alt>3  Switch to Main Vertical Layout
-# <prefix> <alt>4  Switch to Main Horizontal Layout
-# <prefix> <alt>5  Switch to Tiled Layout
-# <prefix> <space> Rotate through the default layouts
-#
-###
-
-### Resizing Panes (remember we have enabled Vim Style also)
-#
-# <prefix> <ctrl>up      increase the height of this pane by one row
-# <prefix> <ctrl>down    decrease the height of this pane by one row
-# <prefix> <ctrl>left    increase the width of this pane by one column
-# <prefix> <ctrl>right   decrease the width of this pane by one column
-# <prefix> <alt>up       increase the height of this pane by five rows
-# <prefix> <alt>down     decrease the height of this pane by five rows
-# <prefix> <alt>left     increase the width of this pane by five columns
-# <prefix> <alt>right    decrease the width of this pane by five columns
-#
-###
-
-### Switching Windows
-#
-# <prefix> 0-9    Switch to window 0-9 - good enough for quick switch
-# <prefix> w      Choose a window from a menu
-# <prefix> c      Create a new window
-# <prefix> ,      Rename current window
-# <prefix> n      Cycle to next window
-# <prefix> p      Cycle to previous window
-# <prefix> !      Breaking Window Panes If you have too many panes in a single window.
-###
-
-### Session Commands
-#
-# <prefix> ( Switch to previous session
-# <prefix> ) Switch to next session
-# <prefix> s Choose from a list of sessions
-# <prefix> $ Rename the session
-# <prefix> d Detach from your current session
-#
-###
-
-### Copy Mode
-#
-# <prefix> [ Enter Copy Mode
-# <prefix> ] Paste current buffer
-# <prefix> = List all buffers and choose one from which to paste
-# <space> (in copy mode) Start selection
-# <enter> (in copy mode) Exit copy mode, copy selection to buffer
-# show-buffer
-# list-buffer
-# choose-buffer
-###
-
-#### Vi mode keystroke
-#
-# h j k l Move one space left, up, down, right, respectively
-# <ctrl>b Scroll up one “page”
-# <ctrl>f Scroll down one “page”
-# g Jump to the top of the buffer
-# G Jump to the end of the buffer
-# w Jump to the beginning of the next word
-# b Jump back one word
-# fn Jump forward to the next occurrence of n on that line
-# Fn Jump backward to the previous occurrence of n on that line
-# ?*search*<enter> Search backwards through the buffer for search
-# /*search*<enter> Search forwards through the buffer for search
-# n Repeat the last / or ? search in the same direction
-# Repeat the last / or ? search in the opposite direction#
-#
-####
+# tmux is completely keyboard driven but at times mouse usage can come handy for easier movements.
+# set-window-option -g mouse on
+# 
+# Note: Not going to enable this and not with out a fight. Let's try 100% mouse-free development.
