copy-paste-setup in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,6 +6,7 @@
 # 2. And, Configuration is fun, especially when you customize as per your need and taste
 #
 # Let's make it friendly, and along the way, do not forget to put more comments in your configuration file; they'll jog your memory later.
+# -g, -r -T -N, M-, C- or ^
 ###########################
 
 # Start with the biggie - <prefix>
@@ -16,7 +17,7 @@
 # Using ctrl+b is a little hard to trigger as the keyboard button is pretty far. Most prefer the 'C-a' key, considering CapsLock can be remapped with Ctr, and A sits just next to the CapsLock. If you have already used the GNU screen, 'C-a' is the usual keys for you.
 
 unbind-key C-b              # free the original bind-key key
-set-option -g prefix C-a    # setting the prefix from C-b to C-a (-g for global)
+set-option -g prefix C-a    # setting the prefix from C-b to C-a
 bind-key C-a send-prefix    # ensure that we can send Ctrl-A to other apps
 
 # TODO: Change Default Shell
@@ -89,38 +90,35 @@ bind-key -r J resize-pane -D 2
 bind-key -r K resize-pane -U 2
 bind-key -r L resize-pane -R 2
 
-############################# [7] Working With Text and Buffers:
+############################# [7] Copying and Pasting Text
 #
 # This can be a real productive boost if you happen to do a lot of copying and pasting between windows
 
 # To navigating through output in quick way, enable vim navigation keys
 set-window-option -g mode-keys vi
 
-# Copying and Pasting Text like Vim (-T => key table. By default, key bound to prefix table, root table is option if we want to control with out prefix (not recommended))
+# Vim Style in Copy-Mode "<prefix> ["
 bind-key Escape copy-mode
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection            -N "start visual mode for selection"
 bind-key -T copy-mode-vi 'y' send-keys -X copy-selection-and-cancel  -N "yank text into the buffer"
-unbind-key p
-bind-key p paste-buffer
 bind-key C-b choose-buffer # view the buffer stack
+unbind-key p
+bind-key p paste-buffer # default "<prefix> ]"
 
 # Alt+C: To copy from the current buffer to the sys clipboard . This config <prefix> C-c
 bind-key M-c run "tmux save-buffer - | xclip -i -sel clipboard"
 
 # Alt+V: To paste text from sys clipboard into current buffer
-bind-key M-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\";tmux paste-buffer"
+bind-key M-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\""
 
 # Ctr+C: Make it even better -just one step to move from sys->buffer->editor vice versa
-# bind-key -T copy-mode-vi 'C-c' copy-pipe "xclip -sel clip -i"
+bind-key -T copy-mode-vi 'C-c' copy-pipe "xclip -sel clip -i"
 
 # Ctr+V: To paste text from sys clipboard into current buffer
 bind-key M-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\";tmux paste-buffer"
 
-# To take ASCII screenshots (tmux-resurrect uses C-s for saving, here binding to C-S-s ) .
-# todo: something freezing the pane after this cmd
-# bind-key C-S-s run "tmux capture-pane && tmux save-buffer ~/.mytmux/screenshots/pane_\"$(date +%FT%T).ss\""
-
-set -g history-limit 30000
+# To take ASCII screenshots (tmux-resurrect uses C-s for saving, here binding to Alt-s ) .
+bind-key M-s run "tmux capture-pane; tmux save-buffer ~/.mytmux/screenshots/pane_\"$(date +%FT%T)\".screenshots"
 
 
 # [12] Visual Styling: Configuring Colors
@@ -180,5 +178,5 @@ run '~/.mytmux/plugins/tpm/tpm' # init TMUX plugin manager (should be lastline)
 #
 # tmux is completely keyboard driven but at times mouse usage can come handy for easier movements.
 # set-window-option -g mouse on
-# clear-history
 # Note: Not going to enable this and not with out a fight. Let's try 100% mouse-free development.
+# Don't bind key at -T root context 
